# hyper-rustls-example

./: Cargo.toml  README.md
src/: main.rs
ssl_certs/: server.crt  server.key
