[package]
name = "hyper-rustls-prac"
version = "0.1.0"
authors = ["Ryo Ota <nwtgck@nwtgck.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.13.0", default-features = false }
tokio = { version = "0.2", features = ["full"] }
rustls = "0.18"
hyper-rustls = "0.21.0"
